# origin

./: .gitignore  README.md  aboutMe.md
Advanced C++/SimpleParseINI/: Parser.h  SimpleParseINI.sln  SimpleParseINI.vcxproj  SimpleParseINI.vcxproj.filters  Syntax.cpp  Syntax.h  ini.txt  main.cpp
Compiling and linking under the hood/task 1/: main.cpp  task 1.sln  task 1.vcxproj
Compiling and linking under the hood/task 2/: task 2.sln
DboLesson/: DboLesson.sln  DboLesson.vcxproj  main.cpp
DesignPatterns/DesignPattern/: DesignPattern.sln  DesignPattern.vcxproj  main.cpp
DesignPatterns/StructPattern/: StructPattern.sln  StructPattern.vcxproj  main.cpp
Diplom/RacingClient/: RacingClient.cpp  RacingClient.sln  RacingClient.vcxproj  ShowTransports.cpp  ShowTransports.h  data.cpp  data.h
Diplom/RacingDynamicLib/: AirTransport.cpp  Broom.cpp  Broom.h  Camel.cpp  CamelSpeed.cpp  CamelSpeed.h  CaretPlane.cpp  CaretPlane.h  Eagle.cpp  Kentavr.cpp  LandTransport.cpp  LandTransport.h  RacingDynamicLib.vcxproj.filters  SpeedBoots.cpp  resource.h
Lessons 1/IntroductionToIDE/: IntroductionToIDE.sln  IntroductionToIDE.vcxproj  main.cpp
Lessons 2/Accounts/: Accounts.vcxproj
Lessons 2/ShowStruct/: ShowStruct.sln
Lessons 3/Counting/: Counting.vcxproj  main.cpp
Lessons 4/AddressCL/: AddressCL.vcxproj  main.cpp
PostgreSQL/libpqxx-7.7.5/pqxxProject/: CMakeLists.txt  main.cpp
Project1/: Project1.sln  Project1.vcxproj  main.cpp
Qt/CoreQtModules/QtModules/: CMakeLists.txt  main.cpp
Qt/QtDesign/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/StopWatchApplication/: CMakeLists.txt  (+4 more)
basic C++ programming/Lessons 12/CmakeForFigures/: CMakeLists.txt  Figure.h  MyExceptions.cpp  MyExceptions.h  Quadrilateral.cpp  Quadrilateral.h  Trinagle.h  main.cpp  quadrilaterals.h  trinagles.h
test/: Source.cpp  test.sln  test.vcxproj
(+309 files in other folders)
